--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "chai": "^4.1.2",
     "karma": "^1.7.1",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0"
   }
 }
