--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^4.0.1"
+  },
+  "dependencies": {
+    "tmp": "0.0.33"
   }
 }
