--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: node_js
 sudo: false
 node_js:
-  - "stable"
-  - esr
+  - "node"
+  - "esr/*"
+  - "8"
+  - "6"
+  - "4"
 addons:
   chrome: stable
 before_script:
