--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: node_js
 sudo: false
 node_js:
-  - "stable"
+  - "node"
+  - "lts/*"
+  - "8"
+  - "6"
 addons:
   chrome: stable
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - export CHROME_BIN=chromium-browser
-env:
-  - KARMA_BROWSER=Firefox
-  - KARMA_BROWSER=Chrome
