--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
+    "karma-safari-launcher": "^1.0.0",
     "mocha": "^4.0.1"
   },
   "dependencies": {
