Also test with runInParent set to `true`

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
   - "lts/*"
   - "8"
   - "6"
+env:
+	- "RUN_IN_PARENT=true"
+	- "RUN_IN_PARENT=false"
 addons:
   chrome: stable
 before_script:
