--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "karma start --single-run"
+    "test": "karma start --single-run || karma start --single-run"
   },
   "keywords": [
     "karma-plugin",
