--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,19 @@ node_js:
 env:
   - RUN_IN_PARENT=true
   - RUN_IN_PARENT=false
+  - KARMA_VERSION=0.13
+  - KARMA_VERSION=1.0
+  - KARMA_VERSION=1.1
+  - KARMA_VERSION=1.2
+  - KARMA_VERSION=1.3
+  - KARMA_VERSION=1.4
+  - KARMA_VERSION=1.5
+  - KARMA_VERSION=1.6
+  - KARMA_VERSION=1.7
 addons:
   chrome: stable
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - export CHROME_BIN=chromium-browser
+  - npm install karma@"$KARMA_VERSION"
