--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,6 @@ node_js:
   - "8"
   - "6"
 env:
-  - RUN_IN_PARENT=true
-  - RUN_IN_PARENT=false
-  - KARMA_VERSION=0.13
   - KARMA_VERSION=1.0
   - KARMA_VERSION=1.1
   - KARMA_VERSION=1.2
@@ -19,8 +16,9 @@ env:
   - KARMA_VERSION=1.7
 addons:
   chrome: stable
+before_install:
+  - npm install --save-dev karma@"$KARMA_VERSION"
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - export CHROME_BIN=chromium-browser
-  - npm install karma@"$KARMA_VERSION"
