--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,4 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - export CHROME_BIN=chromium-browser
+  - export KARMA_BROWSER=Firefox,Chrome_NoSandbox
