--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: node_js
 sudo: false
 node_js:
@@ -21,7 +22,7 @@ addons:
 before_install:
   - npm install --save-dev karma@"$KARMA_VERSION"
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
   - export CHROME_BIN=chromium-browser
   - export KARMA_BROWSER=Firefox,Chrome_NoSandbox
+services:
+  - xvfb
