--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   ],
   "scripts": {
     "test": "RUN_IN_PARENT=true npm run test-try-twice && RUN_IN_PARENT=false npm run test-try-twice",
-    "test-try-twice": "npm run test-run || npm run test-run",
-    "test-run": "karma start --single-run"
+    "test-try-twice": "npm run test-run:gha || npm run test-run:gha",
+    "test-run": "karma start --single-run",
+    "test-run:gha": "karma start karma.conf.gha.js --single-run --browsers GhaHeadlessChrome"
   },
   "keywords": [
     "karma-plugin",
